Add "fullScreen" option to Hero

--- a/src/components/Hero/styles.module.scss
+++ b/src/components/Hero/styles.module.scss
@@ -37,6 +37,10 @@
   &:before {
     background-color: var(--hero--overlay-color);
   }
+
+  &.HeroFullScreen {
+    height: 100vh;
+  }
 }
 
 .Content {
