--- a/src/components/Navigation/styles.module.scss
+++ b/src/components/Navigation/styles.module.scss
@@ -50,6 +50,9 @@
     svg {
       margin: auto;
       display: block;
+      rect {
+        fill: var(--navigation--mobile-menu--color);
+      }
     }
   }
   .NavLink {
