Add a custom stylesheet and plain text class names for overriding any styles / targeting core elements with class names.

--- a/src/components/Layout/styles.module.scss
+++ b/src/components/Layout/styles.module.scss
@@ -1,6 +1,7 @@
 @import 'common/styles';
 @import 'common/styles/_reset';
 @import '../../../config/theme.css';
+@import '../../../config/styles.css';
 
 // App-level Stylesheet
 
