--- a/config/theme.css
+++ b/config/theme.css
@@ -7,11 +7,11 @@
   /* ==================================================================
   // Color Palette
   // ================================================================== */
-  --theme--color--primary: #DC5960;
-  --theme--color--secondary: #676a73;
-  --theme--color--tertiary: #fcf7e6;
-  --theme--color--quaternary: #fcf7e6;
-  --theme--color--white: #FFF;
+  --theme--color--primary: #161F21;
+  --theme--color--secondary: #203133;
+  --theme--color--tertiary: #FFE2FE;
+  --theme--color--quaternary: #7B8779;
+  --theme--color--white: #fff;
   --theme--color--black: #000;
   --theme--color--transparent: transparent;
   --theme--color--transparent-dark: rgba(0, 0, 0, 0.25);
