--- a/config/theme.css
+++ b/config/theme.css
@@ -7,7 +7,7 @@
   /* ==================================================================
   // Color Palette
   // ================================================================== */
-  --theme--color--primary: #DC5960;
+  --theme--color--primary: #FFc09F;
   --theme--color--secondary: #676a73;
   --theme--color--tertiary: #fcf7e6;
   --theme--color--quaternary: #fcf7e6;
