--- a/src/components/DrawingSurface/styles.module.scss
+++ b/src/components/DrawingSurface/styles.module.scss
@@ -70,7 +70,9 @@
   display: block;
   width: 100%;
   height: 100%;
-  cursor: crosshair;
+  cursor: none;
+  border: 10px solid #f00;
+  border-radius: 250px;
 }
 
 .DrawContainer {
@@ -80,7 +82,19 @@
   width: 100%;
   height: 100%;
   z-index: 2;
-  border: 10px solid #f00;
   overflow: hidden;
-  border-radius: 250px;
+  border-radius: inherit;
+}
+
+.Cursor {
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  user-select: none;
+  display: block;
+  width: 150px;
+  height: auto;
+  z-index: 999;
+  transform: translate(25px, -75px);
 }
