--- a/src/components/DrawingSurface/styles.module.scss
+++ b/src/components/DrawingSurface/styles.module.scss
@@ -86,6 +86,9 @@
   display: block;
   width: 100%;
   height: 100%;
+  cursor: none;
+  border: 10px solid #f00;
+  border-radius: 250px;
 }
 
 .DrawOverVideo {
@@ -95,4 +98,19 @@
   right: 0;
   bottom: 0;
   z-index: 2;
+  overflow: hidden;
+  border-radius: inherit;
+}
+
+.Cursor {
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  user-select: none;
+  display: block;
+  width: 150px;
+  height: auto;
+  z-index: 999;
+  transform: translate(25px, -75px);
 }
