--- a/config/styles.css
+++ b/config/styles.css
@@ -1,3 +1,7 @@
 /* ==================================================================
 // Landing Page Styles -- Add any custom styles here
 // ================================================================== */
+.header .header--h1 {
+  margin: auto;
+  text-align: center;
+}
