--- a/src/components/DrawingSurface/styles.module.scss
+++ b/src/components/DrawingSurface/styles.module.scss
@@ -2,6 +2,8 @@
 
 .Easel {
   flex: 1;
+  // Hack: 128px is header height
+  min-height: calc(-128px + 100vh);
 }
 
 .Easel,
@@ -12,16 +14,17 @@
   align-items: center;
   width: 100%;
   position: relative;
+  user-select: none;
 }
 
 .VideoContainer {
   position: relative;
-  overflow: hidden;
   width: 500px;
   height: 500px;
   margin: auto;
-  overflow: hidden;
   border-radius: 250px;
+  overflow: hidden;
+  border: 20px solid white;
 }
 
 .Canvas {
@@ -38,8 +41,7 @@
   object-fit: cover;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  border-radius: 250px;
+  border-radius: inherit;
   &::-webkit-media-controls-play-button {
     display: none !important;
     -webkit-appearance: none;
@@ -71,7 +73,6 @@
   width: 100%;
   height: 100%;
   cursor: none;
-  border: 10px solid #f00;
   border-radius: 250px;
 }
 
@@ -82,7 +83,6 @@
   width: 100%;
   height: 100%;
   z-index: 2;
-  overflow: hidden;
   border-radius: inherit;
 }
 
@@ -96,5 +96,5 @@
   width: 150px;
   height: auto;
   z-index: 999;
-  transform: translate(25px, -75px);
+  transform: translate(0, -100px);
 }
