Adding Accordion Component and BadgeList component Updating mobile spacing Adding tracking event for accordion sections

--- a/src/common/styles/mixins/_block.mixin.scss
+++ b/src/common/styles/mixins/_block.mixin.scss
@@ -5,6 +5,9 @@
 // ==================================================================
 @mixin block() {
   padding: var(--block--padding);
+  @media ($mq-mobile) {
+    padding: calc(var(--block--padding--mobile));
+  }
 }
 
 @mixin block-content() {
@@ -44,7 +47,7 @@
       }
     }
     @media ($mq-mobile) {
-      padding: calc(var(--block--padding));
+      padding: calc(var(--block--padding--mobile));
     }
   }
 }
