Setup Accordion and Badgelist components for Nume

--- a/config/theme.css
+++ b/config/theme.css
@@ -95,6 +95,7 @@
   // ================================================================== */
   --block--max-width: 1200px;
   --block--padding: var(--theme--unit--base);
+  --block--padding--mobile: var(--theme--unit--small);
 
 
   /* ==================================================================
