--- a/config/theme.css
+++ b/config/theme.css
@@ -146,7 +146,7 @@
   --callout--big-numbers--color: var(--theme--color--black);
 
   --callout--full-bleed--background: var(--theme--color--primary);
-  --callout--full-bleed--color: var(--theme--color--white);
+  --callout--full-bleed--color: var(--theme--color--black);
 
 
   /* ==================================================================
