Remove social links from footer and center logo

--- a/config/styles.css
+++ b/config/styles.css
@@ -180,3 +180,12 @@ padding: 0 0 var(--theme--unit--base);
     text-align: center;
   }
 }
+
+#Footer .logo {
+  display: block;
+  margin: auto;
+}
+
+#Footer .footer--content {
+  display: none;
+}
