Bugfix: Accordion caret layout on small screens touched label.

--- a/src/common/styles/mixins/_block.mixin.scss
+++ b/src/common/styles/mixins/_block.mixin.scss
@@ -6,7 +6,7 @@
 @mixin block() {
   padding: var(--block--padding);
   @media ($mq-mobile) {
-    padding: calc(var(--block--padding--mobile));
+    padding: var(--block--padding--mobile);
   }
 }
 
@@ -47,7 +47,7 @@
       }
     }
     @media ($mq-mobile) {
-      padding: calc(var(--block--padding--mobile));
+      padding: var(--block--padding--mobile);
     }
   }
 }
