Bugfix: use <DangerousHTMLContent html={html} /> for Success embed
Improvement: Disable unused oembed libraries so they don't needlessly load their own trackers

Improvement: Add `--page--color` property to complement `--page--background`

--- a/config/theme.css
+++ b/config/theme.css
@@ -66,8 +66,9 @@
   // Page
   // ================================================================== */
   --page--scroll-behavior: smooth; /* smooth|auto */
-  --page--background: var(--theme--color--white);
-  --page--link-active--color: var(--theme--color--black);
+  --page--background: var(--theme--color--black);
+  --page--color: var(--theme--color--primary);
+  --page--link-active--color: var(--theme--color--primary);
   --page--link-hover--color: var(--theme--color--secondary);
   --page--link--color: var(--theme--color--black);
   --page--footer--background: var(--theme--color--white);
