--- a/src/common/styles/_reset.scss
+++ b/src/common/styles/_reset.scss
@@ -17,6 +17,7 @@ html {
 body {
   overscroll-behavior: none;
   background: var(--page--background);
+  color: var(--page--color);
 }
 
 // Full Height Layout to support Sticky Footer
