--- a/src/components/Conversion/styles.module.scss
+++ b/src/components/Conversion/styles.module.scss
@@ -10,7 +10,7 @@
   select,
   button,
   textarea {
-    border-radius: calc(2 * var(--conversion--form--padding));
+    border-radius: var(--conversion--form--radius);
     padding: calc(2 * var(--conversion--form--padding));
   }
 }
