--- a/config/theme.css
+++ b/config/theme.css
@@ -154,10 +154,11 @@
   --conversion--form--background: var(--theme--color--tertiary);
   --conversion--form--color: var(--theme--color--white);
   --conversion--form--padding: var(--theme--unit--small);
-  --conversion--form-input--background: var(--theme--color--white);
-  --conversion--form-input--color: var(--theme--color--black);
-  --conversion--form-input--border: none;
-  --conversion--form-label--color: var(--theme--color--black);
-  --conversion--form-submit--color: var(--theme--color--white);
+  --conversion--form--radius: calc(2 * var(--conversion--form--padding));
+  --conversion--form-input--background: var(--theme--color--black);
+  --conversion--form-input--color: var(--theme--color--white);
+  --conversion--form-input--border: 1px solid var(--theme--color--primary);
+  --conversion--form-label--color: var(--theme--color--primary);
+  --conversion--form-submit--color: var(--theme--color--black);
   --conversion--form-submit--background: var(--theme--color--primary);
 }
