--- a/config/styles.css
+++ b/config/styles.css
@@ -196,7 +196,28 @@ blockquote footer {
   display: none;
 }
 
+#Success {
+  text-align: center;
+}
+
+#Success .callout-cta {
+  --callout--cta--background: var(--theme--color--primary);
+  --callout--cta--color: var(--theme--color--black);
+}
 
 .typeform-widget {
-  min-height: 500px;
+  min-height: 600px;
+  height: 80vh;
+  margin: var(--block--padding);
+  margin-left: calc(-1 * var(--block--padding));
+  margin-right: calc(-1 * var(--block--padding));
+}
+
+@media (max-width: 767px) {
+  .typeform-widget {
+    height: 100vh;
+    margin: var(--block--padding--mobile);
+    margin-left: calc(-1 * var(--block--padding--mobile));
+    margin-right: calc(-1 * var(--block--padding--mobile));
+  }
 }
