Expose utility classes to global scope

--- a/src/common/styles/_utils.scss
+++ b/src/common/styles/_utils.scss
@@ -1,11 +1,13 @@
-.hidden--mobile {
-  @media ($mq-mobile) {
-    display: none;
+:global {
+  .hidden--mobile {
+    @media ($mq-mobile) {
+      display: none;
+    }
   }
-}
 
-.hidden--desktop {
-  @media ($mq-desktop) {
-    display: none;
+  .hidden--desktop {
+    @media ($mq-desktop) {
+      display: none;
+    }
   }
 }
