Make the zipcode white

--- a/config/styles.css
+++ b/config/styles.css
@@ -226,3 +226,7 @@ blockquote footer {
     margin-right: calc(-1 * var(--block--padding--mobile));
   }
 }
+
+.zipcode {
+  color: var(--theme--color--white);
+}
