--- a/config/theme.css
+++ b/config/theme.css
@@ -21,8 +21,8 @@
   /* ==================================================================
   // Typography
   // ================================================================== */
-  --theme--font--root--family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  --theme--font--heading--family: 'Canela', serif;
+  --theme--font--root--family: 'Maax', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --theme--font--heading--family: var(--theme--font--root--family);
   --theme--font--root--size: 20px;
   --theme--font--root--weight: 400;
   --theme--font--root--line-height: 1.5;
@@ -66,7 +66,7 @@
   // Page
   // ================================================================== */
   --page--scroll-behavior: smooth; /* smooth|auto */
-  --page--background: var(--theme--color--primary);
+  --page--background: var(--theme--color--primary) url('/images/background.svg') -25% 50% repeat-y;
   --page--color: var(--theme--color--primary);
   --page--link-active--color: var(--theme--color--black);
   --page--link-hover--color: var(--theme--color--secondary);
