--- a/src/components/Easel/styles.module.scss
+++ b/src/components/Easel/styles.module.scss
@@ -1,5 +1,15 @@
 @import 'common/styles';
 
+@mixin workspace {
+  position: relative;
+  width: 500px;
+  height: 500px;
+  margin: auto;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 20px solid white;
+}
+
 .Easel {
   flex: 1;
   // Hack: 128px is header height
@@ -11,4 +21,133 @@
   width: 100%;
   position: relative;
   user-select: none;
+}
+
+/**
+ * Preview
+ * -------------------------------------------------------------- */
+
+.Preview {
+  @include workspace;
+  overflow: visible;
+}
+
+.PreviewHeading {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  color: var(--theme--color--white);
+  span {
+    display: block;
+    margin: auto;
+  }
+}
+
+.PreviewVideo {
+}
+
+.PreviewButton {
+  position: absolute;
+  top: calc(100% + var(--theme--unit--base));
+  left: 50%;
+  transform: translateX(-50%);
+  display: block;
+  cursor: pointer;
+  transition: transform var(--theme--animation-timing)
+    var(--theme--animation-ease);
+  &:focus,
+  &:hover {
+    transform: scale(1.5);
+    transition: transform var(--theme--animation-timing)
+      var(--theme--animation-ease);
+  }
+}
+
+/**
+ * Workspace
+ * -------------------------------------------------------------- */
+
+.Workspace {
+  @include workspace;
+}
+
+.Button {
+  width: 75%;
+  min-width: 100px;
+  max-width: 250px;
+  margin-top: 24px;
+  padding: 12px 24px;
+  background: silver;
+  position: relative;
+  z-index: 2;
+}
+
+/**
+ * ColoringBook Layer
+ * -------------------------------------------------------------- */
+
+.ColoringBookLayer {
+}
+
+/**
+ * Video Layer
+ * -------------------------------------------------------------- */
+
+.VideoLayer {
+}
+
+.PreviewVideo,
+.Video {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  &::-webkit-media-controls-play-button {
+    display: none !important;
+    -webkit-appearance: none;
+  }
+}
+
+/**
+ * Drawing Layer
+ * -------------------------------------------------------------- */
+.DrawingLayer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  border-radius: inherit;
+}
+.Drawing {
+  display: block;
+  width: 100%;
+  height: 100%;
+  cursor: none;
+  border-radius: 250px;
+}
+.DrawPath {
+}
+
+.Cursor {
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  user-select: none;
+  display: block;
+  width: 150px;
+  height: auto;
+  z-index: 999;
+  transform: translate(0, -100px);
 }
